--- a/framework/styles/sass/_globals.sass
+++ b/framework/styles/sass/_globals.sass
@@ -1,3 +1,12 @@
+/*-------------------------*\
+ * BODY
+/*-------------------------*/
+.ez
+  background-color: $b-025
+
+/*-------------------------*\
+ * DIVIDERS
+/*-------------------------*/
 .divider
   height: 1px
   margin: 0
@@ -5,12 +14,18 @@
   background-color: $w-20
   pointer-events: none
 
+/*-------------------------*\
+ * FLOAT ELEMENTS
+/*-------------------------*/
 .left
   float: left
 
 .right
   float: right
 
+/*-------------------------*\
+ * LOGO
+/*-------------------------*/
 .logo--center
   position: absolute
   left: 50%
