--- a/framework/styles/sass/_typography.sass
+++ b/framework/styles/sass/_typography.sass
@@ -1,40 +1,3 @@
-a
-  background-color: transparent
-  text-decoration: none
-  color: $b-70
-
-  &:hover
-    color: $b-80
-
-ul
-  margin: 0
-  padding: 0
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6
-  padding: 0
-  margin: 0
-  font-weight: 400
-
-  +retina
-    font-weight: 300
-
-b,
-strong
-  font-weight: bold
-
-em
-  font-style: italic
-
-i
-  line-height: 1.35
-
-code,
-kbd,
-pre,
-samp
-  font-family: monospace
+/*-------------------------*\
+ * FONT-SIZES
+/*-------------------------*/
