--- a/framework/styles/sass/_variables.sass
+++ b/framework/styles/sass/_variables.sass
@@ -1,3 +1,16 @@
-// HEADERS
-$header-tall: 35%
+/*-------------------------*\
+ * CONTAINER
+/*-------------------------*/
+$global-width: 1280px
+
+/*-------------------------*\
+ * PAGE HEADERS
+/*-------------------------*/
 $header-short: 25%
+$header-tall: 35%
+
+/*-------------------------*\
+ * TABS
+/*-------------------------*/
+$tab-height: 55px
+$tab-modifier: 2px
