--- a/framework/styles/sass/_headers.sass
+++ b/framework/styles/sass/_headers.sass
@@ -1,11 +1,17 @@
 .header
   &--tall
-    +bg-cover(100%, $header-tall, center, 78%) // TODO: [JR] change 78% (For PSD pixel perfect only, not for production) to center
-    +bg-fade($blue, 0.85)
+    +cover($header-tall)
+
+    &--bg
+      +bg-cover(center, 78%) // TODO: [JR] change 78% (For PSD pixel perfect only, not for production) to center
+      +bg-fade($blue, 0.85)
 
   &--short
-    +bg-cover(100%, $header-short, center, 78%)
-    +bg-fade($blue, 0.85)
+    +cover($header-short)
+
+    &--bg
+      +bg-cover(center, 78%)
+      +bg-fade($blue, 0.85)
 
   &--title
     +bg-title(50%, $w-90)
