--- a/framework/styles/sass/_mixins.sass
+++ b/framework/styles/sass/_mixins.sass
@@ -35,26 +35,34 @@
     @content
 
 /*-------------------------*\
- * CLEARFIX
+ * CONTAINER
 /*-------------------------*/
-=clearfix
-  &:before,
-  &:after
-    content: ""
-    display: table
-  &:after
-    clear: both
+=container($width: $global-width, $padding: 20px)
+  width: 100%
+  max-width: $width
+  padding: $padding
+  margin: auto
+
+  +min-width($global-width + 40px)
+    padding: $padding 0
 
 /*-------------------------*\
- * BACKGROUND-COVER
+ * COVERS
 /*-------------------------*/
-=bg-cover($w: 100%, $h: 100%, $bg-xpos: center, $bg-ypos: center)
+=cover($height)
+  position: relative
+  min-height: 300px
+  height: $height
+
+/*-------------------------*\
+ * BACKGROUND COVERS
+/*-------------------------*/
+=bg-cover($bg-xpos: center, $bg-ypos: center)
   position: absolute
   top: 0
   left: 0
-  width: $w
-  min-height: 350px
-  height: $h
+  width: 100%
+  height: 100%
   background-size: 100%
   background-size: cover
   background-position: $bg-xpos $bg-ypos
@@ -78,13 +86,10 @@
   width: 100%
   +translateY(-50%)
   color: $color
-  font-size: 28px
+  font-size: 36px
   text-align: center
 
   +min-width(960px)
-    font-size: 36px
-
-  +min-width(1100px)
     font-size: 48px
 
 =bg-subtitle($top: 60%, $color: null)
@@ -113,3 +118,14 @@
     text-transform: none
     text-rendering: optimizeLegibility
     +font-smooth
+
+/*-------------------------*\
+ * CLEARFIX
+/*-------------------------*/
+=clearfix
+  &:before,
+  &:after
+    content: ""
+    display: table
+  &:after
+    clear: both
