--- a/framework/styles/sass/_grid.sass
+++ b/framework/styles/sass/_grid.sass
@@ -12,3 +12,11 @@
 
 .content
   +container($global-width, 20px)
+
+.sidebar
+  display: none
+  
+  +min-width(960px)
+    display: block
+    width: 20%
+    padding: 20px
