--- a/framework/styles/sass/_mixins.sass
+++ b/framework/styles/sass/_mixins.sass
@@ -43,7 +43,7 @@
   padding: $padding
   margin: auto
 
-  +min-width($global-width + 40px)
+  +min-width($global-width + $padding * 2)
     padding: $padding 0
 
 /*-------------------------*\
