--- a/framework/styles/sass/_variables.sass
+++ b/framework/styles/sass/_variables.sass
@@ -12,5 +12,6 @@ $header-tall: 35%
 /*-------------------------*\
  * TABS
 /*-------------------------*/
+$max-number-of-tabs: 8
 $tab-height: 55px
 $tab-modifier: 2px
