--- a/framework/styles/sass/_navigation.sass
+++ b/framework/styles/sass/_navigation.sass
@@ -15,15 +15,32 @@
         +min-width(960px)
           display: inline-block
 
+  &--sidebar
+    width: 100%
+
+    &--sub
+
+.item
+  margin-bottom: 20px
+  list-style-type: none
+
+  &--sub
+    margin: 10px
+    list-style-type: none
+
 .link
   &--tab
     display: block
     height: $tab-height - $tab-modifier
-    padding: 0 20px
+    padding: 0 5px
     color: $b-45
-    font-size: 16px
+    font-size: 11px
     font-weight: 600
     text-transform: uppercase
+
+    +min-width(960px)
+      padding: 0 20px
+      font-size: 16px
 
     &:hover
       color: $b-70
@@ -31,3 +48,20 @@
     &.active
       color: $blue--link
       border-bottom: $tab-modifier solid
+
+  &--header
+    display: block
+    padding: 7px 14px
+    font-size: 16px
+    font-weight: 600
+    text-transform: uppercase
+
+  &--sub
+    padding: 7px 14px
+    color: $b-45
+    font-size: 16px
+    font-weight: 600
+
+    &:hover,
+    &.active
+      color: $blue--link
