--- a/framework/styles/sass/_tabs.sass
+++ b/framework/styles/sass/_tabs.sass
@@ -9,5 +9,16 @@
   text-align: center
 
   .tab
-    display: inline-block
     list-style: none
+
+    +max-width(959px)
+      @for $i from 1 through $max-number-of-tabs
+        &:first-child:nth-last-child(#{$i}),
+        &:first-child:nth-last-child(#{$i}) ~ .tab,
+          float: left
+          width: 100% / $i
+
+    +min-width(960px)
+      display: inline-block
+      width: auto
+      float: none
